--- a/package.json
+++ b/package.json
@@ -4,19 +4,48 @@
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web",
+    "backend": "json-server --watch ./db/db.json"
   },
   "dependencies": {
+    "@expo-google-fonts/sora": "^0.2.3",
+    "@hookform/resolvers": "^3.9.0",
+    "@notifee/react-native": "^7.8.2",
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-vector-icons/ionicons": "^7.4.0-alpha.18",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
+    "add": "^2.0.6",
+    "axios": "^1.7.3",
     "expo": "~51.0.26",
+    "expo-build-properties": "~0.12.5",
+    "expo-font": "~12.0.9",
+    "expo-image-picker": "~15.0.7",
     "expo-status-bar": "~1.12.1",
+    "install": "^0.13.0",
+    "npm": "^10.8.2",
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-hook-form": "^7.52.2",
+    "react-native": "0.74.5",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-modal": "^13.0.1",
+    "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-safe-area-context": "^4.10.8",
+    "react-native-safe-area-view": "^2.0.0",
+    "react-native-svg": "^15.5.0",
+    "react-native-toast-message": "^2.2.0",
+    "styled-components": "^6.1.12",
+    "toastify-react-native": "^5.0.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "react-native-svg-transformer": "^1.5.0",
     "typescript": "^5.1.3"
   },
   "private": true
